integ-tests/tests/snapshots/parser__bad_floats__trailing_exp3.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ trailing_exp3:1:5
  │
1 │ a = 0.0E
  │     ^ unable to parse number


